2010-01-13  Richard Guenther  <rguenther@suse.de>

PR middle-end/42716
	* fold-const.c (fold_unary_loc): Fold INDIRECT_REFs.

	* gcc.c-torture/compile/pr42716.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155859 138bc75d-0d04-0410-961f-82ee72b054a4